# evoadapt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci-rust-clippy-notify.yml
apps/ci_jenkins/: Cargo.toml
apps/ci_jenkins/src/: main.rs
configs/: jenkinsCfg.json
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs
