[package]
name = "ci_jenkins"
version = "0.1.0"
edition = "2021"
description = "Library to trigger jenkin using JSON config file"
authors = ["HuyAnhLe anhhuy@live.com"]

[dependencies]
common = { path = "../../libs/utils" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4" # Library for get time
