[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Library common"
authors = ["HuyAnhLe anhhuy@live.com"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" # Library for get time